Fixed css to split word if large
If the sentence (category) is too long, it will split the sentence

--- a/sources/css/main.css
+++ b/sources/css/main.css
@@ -144,12 +144,17 @@ Edge support
     width: 75%;
 }
 
+#main-body li{
+    
+}
+
 #aside-box{
     float: left;
     display: block;
     margin-right: 40px;
     border-right: solid;
     padding-right: 15px;
+    width: 15%;
 }
 
 #aside-box a{
